--- a/package.json
+++ b/package.json
@@ -9,16 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@types/styled-components-react-native": "^5.1.3",
+    "@use-expo/font": "^2.0.0",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-modal": "^13.0.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
