--- a/app.json
+++ b/app.json
@@ -3,9 +3,7 @@
     "name": "UrnaEletronica",
     "slug": "UrnaEletronica",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"]
   },
   "name": "UrnaEletronica"
 }
